@@ -1050,6 +1050,12 @@ function DOMUtils(doc: Document, settings: Partial<DOMUtilsSettings> = {}): DOMU
             return false;
           }
 
+          // Keep anchor in empty block
+          const isAnchor = name && !getAttrib(node, 'href') && (getAttrib(node, 'id') || getAttrib(node, 'name'));
+          if (isAnchor) {
+            return false;
+          }
+
           // Keep elements with data-bookmark attributes or name attribute like <a name="1"></a>
           attributes = getAttribs(node);
           i = attributes.length;
