@@ -7,8 +7,8 @@
 
 import Dialog from '../ui/Dialog';
 
-const register = function (editor) {
-  editor.addCommand('mceAnchor', function () {
+const register = (editor) => {
+  editor.addCommand('mceAnchor', () => {
     Dialog.open(editor);
   });
 };
