@@ -1,4 +1,4 @@
-import { Pipeline, Step, Logger, Log } from '@ephox/agar';
+import { Pipeline, Step, Log } from '@ephox/agar';
 import { TinyApis, TinyLoader, TinyUi } from '@ephox/mcagar';
 import AchorPlugin from 'tinymce/plugins/anchor/Plugin';
 import Theme from 'tinymce/themes/silver/Theme';
@@ -9,19 +9,18 @@ UnitTest.asynctest('browser.tinymce.plugins.anchor.AnchorEditTest', (success, fa
   AchorPlugin();
   Theme();
 
-  const sType = function (text) {
-    return Logger.t('Add anchor' + text, Step.sync(function () {
-      const elm: any = document.querySelector('div[role="dialog"].tox-dialog input');
+  const sType = (text: string) =>
+    Log.step('TBA', 'Add anchor', Step.sync(() => {
+      const elm: any = document.querySelector('div[role="dialog"].tox-dialog  input');
       elm.value = text;
     }));
-  };
 
-  TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
+  TinyLoader.setupLight((editor, onSuccess, onFailure) => {
     const tinyUi = TinyUi(editor);
     const tinyApis = TinyApis(editor);
 
     Pipeline.async({},
-      Log.steps('TBA', 'Anchor: Add anchor, change anchor, undo anchor then the anchor should be there as first entered', [
+      Log.steps('TBA', 'Anchor: Add anchor, change anchor, undo anchor change then the anchor should be there as first entered', [
         tinyApis.sFocus(),
         tinyApis.sSetContent('abc'),
         tinyApis.sExecCommand('mceAnchor'),
@@ -30,6 +29,7 @@ UnitTest.asynctest('browser.tinymce.plugins.anchor.AnchorEditTest', (success, fa
         tinyUi.sClickOnUi('click on Save btn', '.tox-dialog__footer .tox-button:not(.tox-button--secondary)'),
         tinyApis.sAssertContentPresence({ 'a.mce-item-anchor#abc': 1 }),
         tinyApis.sSelect('a.mce-item-anchor', []),
+        tinyUi.sWaitForUi('Anchor toolbar button is highlighted', 'button[aria-label="Anchor"][aria-pressed="true"]'),
         tinyApis.sExecCommand('mceAnchor'),
         tinyUi.sWaitForPopup('wait for window', 'div[role="dialog"].tox-dialog'),
         sType('def'),
@@ -37,9 +37,10 @@ UnitTest.asynctest('browser.tinymce.plugins.anchor.AnchorEditTest', (success, fa
         tinyApis.sAssertContentPresence({ 'a.mce-item-anchor#def': 1 }),
         tinyApis.sExecCommand('undo'),
         tinyApis.sSetCursor([], 0),
-        tinyApis.sAssertContentPresence({ 'a.mce-item-anchor#abc': 1 })
+        tinyApis.sAssertContentPresence({ 'a.mce-item-anchor#abc': 1 }),
+        tinyUi.sWaitForUi('Anchor toolbar button is not highlighted', 'button[aria-label="Anchor"][aria-pressed="false"]'),
       ])
-    , onSuccess, onFailure);
+      , onSuccess, onFailure);
   }, {
     theme: 'silver',
     plugins: 'anchor',
